--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
             ],
             "styles": [
               "src/styles.scss",
+              "node_modules/typeface-muli/index.css",
               "node_modules/admin-lte/plugins/fontawesome-free/css/all.min.css",
               "node_modules/admin-lte/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css",
               "node_modules/admin-lte/plugins/datatables-responsive/css/responsive.bootstrap4.min.css",
@@ -40,11 +41,10 @@
               "node_modules/datatables.net-dt/css/jquery.dataTables.css"
             ],
             "scripts": [
-              "node_modules/admin-lte/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js",
               "node_modules/admin-lte/plugins/jquery/jquery.min.js",
               "node_modules/admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js",
               "node_modules/admin-lte/plugins/datatables/jquery.dataTables.min.js",
-              "node_modules/admin-lte/plugins/datatables/jquery.dataTables.js",
+              "node_modules/admin-lte/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js",
               "node_modules/admin-lte/plugins/datatables-responsive/js/dataTables.responsive.min.js",
               "node_modules/admin-lte/plugins/datatables-responsive/js/responsive.bootstrap4.min.js",
               "node_modules/admin-lte/plugins/datatables-buttons/js/dataTables.buttons.min.js",
@@ -57,8 +57,7 @@
               "node_modules/admin-lte/plugins/datatables-buttons/js/buttons.colVis.min.js",
               "node_modules/admin-lte/dist/js/adminlte.min.js",
               "node_modules/admin-lte/dist/js/demo.js",
-              "node_modules/jquery/dist/jquery.js",
-              "node_modules/datatables.net/js/jquery.dataTables.js"
+              "src/assets/scriptsForTable.js"
             ]
           },
           "configurations": {
@@ -120,9 +119,34 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/typeface-muli/index.css",
+              "node_modules/admin-lte/plugins/fontawesome-free/css/all.min.css",
+              "node_modules/admin-lte/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css",
+              "node_modules/admin-lte/plugins/datatables-responsive/css/responsive.bootstrap4.min.css",
+              "node_modules/admin-lte/plugins/datatables-buttons/css/buttons.bootstrap4.min.css",
+              "node_modules/admin-lte/dist/css/adminlte.min.css",
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/admin-lte/plugins/jquery/jquery.min.js",
+              "node_modules/admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js",
+              "node_modules/admin-lte/plugins/datatables/jquery.dataTables.min.js",
+              "node_modules/admin-lte/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js",
+              "node_modules/admin-lte/plugins/datatables-responsive/js/dataTables.responsive.min.js",
+              "node_modules/admin-lte/plugins/datatables-responsive/js/responsive.bootstrap4.min.js",
+              "node_modules/admin-lte/plugins/datatables-buttons/js/dataTables.buttons.min.js",
+              "node_modules/admin-lte/plugins/datatables-buttons/js/buttons.bootstrap4.min.js",
+              "node_modules/admin-lte/plugins/jszip/jszip.min.js",
+              "node_modules/admin-lte/plugins/pdfmake/pdfmake.min.js",
+              "node_modules/admin-lte/plugins/pdfmake/vfs_fonts.js",
+              "node_modules/admin-lte/plugins/datatables-buttons/js/buttons.html5.min.js",
+              "node_modules/admin-lte/plugins/datatables-buttons/js/buttons.print.min.js",
+              "node_modules/admin-lte/plugins/datatables-buttons/js/buttons.colVis.min.js",
+              "node_modules/admin-lte/dist/js/adminlte.min.js",
+              "node_modules/admin-lte/dist/js/demo.js",
+              "src/assets/scriptsForTable.js"
+            ]
           }
         },
         "lint": {
