--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "angular-datatables": "^11.1.1",
     "datatables.net": "^1.10.23",
     "datatables.net-dt": "^1.10.20",
-    "jquery": "^3.4.1",
+    "ionicons": "2.0.1",
+    "jquery": "^3.5.1",
     "js-base64": "^3.6.0",
     "ngx-perfect-scrollbar": "^10.1.0",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
+    "typeface-muli": "^1.1.13",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -36,7 +38,7 @@
     "@angular/compiler-cli": "~11.0.4",
     "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "~3.6.0",
-    "@types/jquery": "^3.3.33",
+    "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
